# Robotica

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  install_dependencies.sh  package.xml  ros-entrypoint.sh
.github/workflows/: main.yml
launch/: projeto.launch  solution.launch  start.launch
rviz/: panda.rviz
src/: arm_control.py  proj_controle.py
